--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -35,5 +35,5 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=pbl5 -Dsonar.projectName='pbl5'
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
 
