--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -23,3 +23,4 @@ jobs:
       with:
         host: ${{ secrets.SONAR_HOST_URL }}
         login: ${{ secrets.SONAR_TOKEN }}
+        options: -Dsonar.java.binaries=target/classes
