--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -1,13 +1,12 @@
 on:
-  # Trigger analysis when pushing in master or pull requests, and when creating
-  # a pull request. 
   push:
     branches:
       - main
   pull_request:
-      types: [opened, synchronize, reopened]
+    types: [opened, synchronize, reopened]
 
 name: SonarQube Scan
+
 jobs:
   sonarqube:
     name: SonarQube Trigger
@@ -16,10 +15,17 @@ jobs:
     - name: Checking out
       uses: actions/checkout@main
       with:
-        # Disabling shallow clone is recommended for improving relevancy of reporting
         fetch-depth: 0
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'adopt'
+        java-version: '17'
+
     - name: SonarQube Scan
       uses: kitabisa/sonarqube-action@v1.2.0
       with:
         host: ${{ secrets.SONAR_HOST_URL }}
         login: ${{ secrets.SONAR_TOKEN }}
+
