--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -28,4 +28,4 @@ jobs:
       with:
         host: ${{ secrets.SONAR_HOST_URL }}
         login: ${{ secrets.SONAR_TOKEN }}
-
+        options: -Dsonar.java.binaries=**/target/classes/com/mondradon/BattleShip
