--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -24,11 +24,10 @@ jobs:
         java-version: '17'
 
     - name: SonarQube Scan
-      run: |
-        docker run \
-          --rm \
-          -e SONAR_HOST_URL=${{ secrets.SONAR_HOST_URL }} \
-          -e SONAR_TOKEN=${{ secrets.SONAR_TOKEN }} \
-          -v "${PWD}/:/usr/src" \
-          sonarsource/sonar-scanner-cli
+      uses: kitabisa/sonarqube-action@v1.2.0
+      with:
+        host: ${{ secrets.SONAR_HOST_URL }}
+        login: ${{ secrets.SONAR_TOKEN }}
+        options: -Dsonar.java.binaries=**/target/classes
+
 
